test/compile_error/typemismatch.conf.2.def
config type_mismatch_conf {
	foo : real(1);
}
